kube/token-service/token-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: token-service
  name: token-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3500
  selector:
    app: token-service
